Update documentation for expand functionality
- Add detailed expand command examples and scenarios
- Include expand ODCR execution examples with output
- Update JSON result format documentation
- Add expand-specific troubleshooting and best practices
- Update advanced usage examples for both create and expand modes

--- a/使用指南.md
+++ b/使用指南.md
@@ -1,7 +1,7 @@
 # ODCR本地管理工具 - 详细使用指南
 
 ## 概述
-本地Python脚本实现ODCR管理功能，支持创建新ODCR和扩容现有ODCR，内置智能拆分购买逻辑和实时进度显示。
+本地Python脚本实现ODCR管理功能，支持**创建新ODCR**和**扩容现有ODCR**两种模式，内置智能拆分购买逻辑和实时进度显示。
 
 ## 安装配置
 
@@ -48,13 +48,12 @@ export AWS_DEFAULT_REGION=us-west-2
 
 ## 使用方法
 
-### 基本用法
+### 创建新ODCR
 ```bash
+# 基本用法
 python odcr_manager.py create --instance-type INSTANCE_TYPE --availability-zone AZ --count COUNT
-```
 
-### 完整参数示例
-```bash
+# 完整参数示例
 python odcr_manager.py create \
   --instance-type r7i.metal-24xl \
   --availability-zone us-west-2a \
@@ -64,26 +63,44 @@ python odcr_manager.py create \
   --region us-west-2
 ```
 
+### 扩容现有ODCR
+```bash
+# 基本用法
+python odcr_manager.py expand --odcr-id ODCR_ID --count COUNT
+
+# 完整参数示例
+python odcr_manager.py expand \
+  --odcr-id cr-xxxxxxxxx \
+  --count 20 \
+  --timeout 60 \
+  --region us-west-2
+```
+
 ### 常用场景
 
-**1. 大批量实例预留**
+**1. 创建大批量实例预留**
 ```bash
 python odcr_manager.py create --instance-type m5.large --availability-zone us-west-2a --count 50
 ```
 
-**2. 高端实例类型**
+**2. 创建高端实例类型**
 ```bash
 python odcr_manager.py create --instance-type r7i.metal-24xl --availability-zone us-west-2a --count 5
 ```
 
-**3. 短时间任务**
+**3. 扩容现有ODCR**
+```bash
+python odcr_manager.py expand --odcr-id cr-abc123def456 --count 10
+```
+
+**4. 短时间任务**
 ```bash
 python odcr_manager.py create --instance-type t3.medium --availability-zone us-west-2a --count 20 --timeout 30
 ```
 
 ## 执行示例
 
-### 成功场景 (容量充足)
+### 创建新ODCR - 成功场景 (容量充足)
 ```
 🎯 目标: 创建 8 台 t3.micro 实例在 us-west-2a
 ⏰ 超时设置: 60 分钟
@@ -98,7 +115,7 @@ python odcr_manager.py create --instance-type t3.medium --availability-zone us-w
 📊 总尝试次数: 1
 ```
 
-### 拆分购买场景 (容量不足)
+### 创建新ODCR - 拆分购买场景 (容量不足)
 ```
 🎯 目标: 创建 10 台 r7i.metal-24xl 实例在 us-west-2a
 ⏰ 超时设置: 60 分钟
@@ -140,6 +157,48 @@ python odcr_manager.py create --instance-type t3.medium --availability-zone us-w
 最终结果: ODCR-1(2台) + ODCR-2(8台) = 10台
 ```
 
+### 扩容现有ODCR - 成功场景
+```
+🎯 目标: 为ODCR cr-abc123def456 增加 10 台实例
+⏰ 超时设置: 60 分钟
+============================================================
+📊 当前容量: 5 台 (m5.large 在 us-west-2a)
+
+🔄 第1次尝试: 扩容 +10 台
+📊 进度: 0/10 (0.0%) | ODCR数量: 0 | 运行时间: 0:00:00
+✅ 扩容成功! ODCR cr-abc123def456 现有 15 台 (+10)
+📊 进度: 10/10 (100.0%) | ODCR数量: 0 | 运行时间: 0:00:01
+============================================================
+🎉 扩容完成! ODCR cr-abc123def456 成功增加 10 台，总容量: 15
+📊 总尝试次数: 1
+```
+
+### 扩容现有ODCR - 拆分购买场景
+```
+🎯 目标: 为ODCR cr-xyz789abc123 增加 20 台实例
+⏰ 超时设置: 60 分钟
+============================================================
+📊 当前容量: 10 台 (c5.xlarge 在 us-west-2b)
+
+🔄 第1次尝试: 扩容 +20 台
+📊 进度: 0/20 (0.0%) | ODCR数量: 0 | 运行时间: 0:00:00
+⚠️  容量不足，降级到 +10 台重试
+
+🔄 第2次尝试: 扩容 +10 台
+📊 进度: 0/20 (0.0%) | ODCR数量: 0 | 运行时间: 0:00:05
+✅ 扩容成功! ODCR cr-xyz789abc123 现有 20 台 (+10)
+📊 进度: 10/20 (50.0%) | ODCR数量: 0 | 运行时间: 0:00:06
+⏳ 等待30秒后继续扩容剩余 10 台...
+
+🔄 第3次尝试: 扩容 +10 台
+📊 进度: 10/20 (50.0%) | ODCR数量: 0 | 运行时间: 0:00:36
+✅ 扩容成功! ODCR cr-xyz789abc123 现有 30 台 (+10)
+📊 进度: 20/20 (100.0%) | ODCR数量: 0 | 运行时间: 0:00:37
+============================================================
+🎉 扩容完成! ODCR cr-xyz789abc123 成功增加 20 台，总容量: 30
+📊 总尝试次数: 3
+```
+
 ## 实时功能说明
 
 ### 📊 实时状态栏
@@ -169,7 +228,7 @@ python odcr_manager.py create --instance-type t3.medium --availability-zone us-w
 
 ## 输出格式
 
-### 最终结果JSON
+### 创建新ODCR结果JSON
 ```json
 {
   "success": true,
@@ -195,7 +254,24 @@ python odcr_manager.py create --instance-type t3.medium --availability-zone us-w
 }
 ```
 
+### 扩容ODCR结果JSON
+```json
+{
+  "success": true,
+  "odcr_id": "cr-abc123def456",
+  "initial_capacity": 5,
+  "target_increase": 10,
+  "actual_increase": 10,
+  "final_capacity": 15,
+  "total_attempts": 1,
+  "elapsed_time": "0:00:01",
+  "completed": true
+}
+```
+
 ### 字段说明
+
+#### 创建新ODCR
 - `success`: 是否有任何成功购买
 - `target_count`: 目标实例数量
 - `actual_count`: 实际获得的实例数量
@@ -204,17 +280,38 @@ python odcr_manager.py create --instance-type t3.medium --availability-zone us-w
 - `elapsed_time`: 总执行时间
 - `completed`: 是否完全达到目标
 
+#### 扩容现有ODCR
+- `success`: 是否有任何成功扩容
+- `odcr_id`: 扩容的ODCR ID
+- `initial_capacity`: 扩容前的容量
+- `target_increase`: 目标增加数量
+- `actual_increase`: 实际增加数量
+- `final_capacity`: 扩容后的总容量
+- `total_attempts`: 总尝试次数
+- `elapsed_time`: 总执行时间
+- `completed`: 是否完全达到目标
+- `created_odcrs`: 创建的ODCR列表
+- `total_attempts`: 总尝试次数
+- `elapsed_time`: 总执行时间
+- `completed`: 是否完全达到目标
+
 ## 核心算法
 
-### 智能扩容优先级
+### 创建新ODCR模式
 1. **首次购买**: 创建新ODCR
 2. **后续购买**: 优先扩容最后一个ODCR
 3. **扩容失败**: 尝试创建新ODCR
 4. **目标**: 最小化ODCR数量，最大化资源利用
 
-### 拆分购买策略
+### 扩容现有ODCR模式
+1. **获取当前状态**: 查询ODCR当前容量和配置
+2. **计算目标容量**: 当前容量 + 增加数量
+3. **尝试扩容**: 调用ModifyCapacityReservation API
+4. **拆分重试**: 容量不足时自动减半重试
+
+### 拆分购买策略 (两种模式通用)
 1. **初始尝试**: 目标数量
-2. **容量不足**: 自动减半 (10→5→2→1)
+2. **容量不足**: 自动减半 (20→10→5→2→1)
 3. **最小单位**: 1台实例
 4. **持续重试**: 直到成功或超时
 
@@ -245,7 +342,13 @@ python odcr_manager.py create --instance-type t3.medium --availability-zone us-w
 解决: 确认实例类型在指定区域可用
 ```
 
-**4. 完全无容量**
+**4. ODCR不存在 (扩容模式)**
+```
+错误: ODCR not found
+解决: 确认ODCR ID正确且在指定区域
+```
+
+**5. 完全无容量**
 ```
 现象: 即使1台也无法获得容量
 解决: 尝试其他可用区或实例类型
@@ -255,7 +358,11 @@ python odcr_manager.py create --instance-type t3.medium --availability-zone us-w
 
 **1. 使用较小的超时时间测试**
 ```bash
+# 创建模式测试
 python odcr_manager.py create --instance-type t3.micro --availability-zone us-west-2a --count 2 --timeout 5
+
+# 扩容模式测试 (需要真实ODCR ID)
+python odcr_manager.py expand --odcr-id cr-xxxxxxxxx --count 2 --timeout 5
 ```
 
 **2. 检查AWS凭证**
@@ -268,22 +375,30 @@ aws sts get-caller-identity
 aws ec2 describe-availability-zones --region us-west-2
 ```
 
+**4. 查看现有ODCR**
+```bash
+aws ec2 describe-capacity-reservations --region us-west-2
+```
+
 ## 最佳实践
 
 ### 1. 容量规划
 - 在高峰时段前提前预留
 - 考虑使用多个可用区分散风险
 - 监控容量使用情况
+- 优先扩容现有ODCR而非创建新的
 
 ### 2. 成本优化
 - 使用合适的实例类型
 - 及时释放不需要的ODCR
 - 考虑使用Savings Plans
+- 通过扩容减少ODCR数量
 
 ### 3. 运维建议
 - 定期检查ODCR状态
 - 监控容量利用率
 - 建立容量预警机制
+- 记录ODCR ID用于后续扩容
 
 ## 高级用法
 
@@ -295,6 +410,44 @@ aws ec2 describe-availability-zones --region us-west-2
 python odcr_manager.py create --instance-type m5.large --availability-zone us-west-2a --count 10
 python odcr_manager.py create --instance-type c5.xlarge --availability-zone us-west-2b --count 5
 python odcr_manager.py create --instance-type r5.large --availability-zone us-west-2c --count 8
+
+# 批量扩容现有ODCR
+python odcr_manager.py expand --odcr-id cr-abc123 --count 5
+python odcr_manager.py expand --odcr-id cr-def456 --count 10
+```
+
+### 2. 结果处理
+```bash
+# 保存创建结果到文件
+python odcr_manager.py create --instance-type m5.large --availability-zone us-west-2a --count 10 > create_result.log 2>&1
+
+# 保存扩容结果到文件
+python odcr_manager.py expand --odcr-id cr-xxxxxxxxx --count 10 > expand_result.log 2>&1
+
+# 提取ODCR ID
+python odcr_manager.py create --instance-type m5.large --availability-zone us-west-2a --count 10 | grep "cr-" | awk '{print $4}'
+```
+
+### 3. 监控集成
+```python
+# 示例: 集成到监控系统
+import subprocess
+import json
+
+# 创建新ODCR
+result = subprocess.run(['python', 'odcr_manager.py', 'create', '--instance-type', 'm5.large', '--availability-zone', 'us-west-2a', '--count', '10'], 
+                       capture_output=True, text=True)
+
+# 扩容现有ODCR
+result = subprocess.run(['python', 'odcr_manager.py', 'expand', '--odcr-id', 'cr-xxxxxxxxx', '--count', '5'], 
+                       capture_output=True, text=True)
+
+if result.returncode == 0:
+    # 解析JSON结果并发送到监控系统
+    output_lines = result.stdout.strip().split('\n')
+    json_result = json.loads(output_lines[-1])
+    # 发送到监控系统...
+```
 ```
 
 ### 2. 结果处理
